Merge GitConnector with current state of KONAP